<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:id="@+id/group_0">
        <item
            android:id="@+id/action_profile"
            android:checkable="true"
            android:icon="@drawable/profile"
            android:title="@string/profile"
            app:showAsAction="ifRoom" />
    </group>
    <group android:id="@+id/group_1">
        <item
            android:id="@+id/action_wallpaper"
            android:checkable="true"
            android:icon="@drawable/wallpaper"
            android:iconTint="@color/white"
            android:title="@string/wallpaper"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_live_wallpaper"
            android:checkable="true"
            android:icon="@drawable/live_wallpaper"
            android:iconTint="@color/white"
            android:title="@string/live_wallpapers"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_ringtones"
            android:checkable="true"
            android:icon="@drawable/music"
            android:iconTint="@color/white"
            android:title="@string/ringtone"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_favourite"
            android:checkable="true"
            android:icon="@drawable/baseline_favorite_border_24"
            android:title="@string/favourites"
            app:showAsAction="ifRoom" />
    </group>
    <group android:id="@+id/group_2">
        <item
            android:id="@+id/action_upload"
            android:checkable="true"
            android:icon="@drawable/upload"
            android:title="@string/upload"
            app:showAsAction="ifRoom" />
    </group>
    <group android:id="@+id/group_3">

        <item
            android:id="@+id/action_instagram"
            android:checkable="true"
            android:icon="@drawable/instagram"
            android:iconTint="@color/white"
            android:title="@string/follow_us_on_instagram"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/action_privacy_policy"
            android:checkable="true"
            android:icon="@drawable/info"
            android:iconTint="@color/white"
            android:title="@string/privacy_policy"
            app:showAsAction="ifRoom" />
    </group>
</menu>