<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:backgroundTint="@color/background"
    app:cardCornerRadius="20dp"
    app:cardElevation="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btWallpaperUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/wallpaper"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btLiveWallpaperUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/live_wallpapers"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btRingtoneUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/ringtone"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btUploadPopUpClose"
            style="@style/Widget.Material3.Button.IconButton.Outlined"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginVertical="16dp"
            app:icon="@drawable/baseline_close_24"
            app:iconTint="@color/white" />
    </LinearLayout>
</androidx.cardview.widget.CardView>